add allure reports