@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.2'
+        classpath 'io.qameta.allure:allure-gradle:2.4'
+    }
+}
+
 plugins {
     id 'java'
     id 'eclipse' // optional (to generate Eclipse project files)
@@ -8,15 +19,31 @@ sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 version = '0.1'
 
+apply plugin: 'io.qameta.allure'
+
+allure {
+    version = '2.4.1'
+    autoconfigure = true
+    aspectjweaver = true
+    aspectjVersion = '1.8.10'
+
+    useJUnit5 {
+        version = '2.0-BETA21'
+    }
+}
+
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
+    compile group: 'io.qameta.allure', name: 'allure-gradle', version: '2.5'
     testCompile('org.junit.jupiter:junit-jupiter-api:5.3.1')
     testCompile('org.junit.jupiter:junit-jupiter-params:5.3.1')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.1')
     testCompile ('io.rest-assured:rest-assured:3.1.1')
+    testCompile 'io.qameta.allure:allure-gradle:2.4'
 }
 
 test {
@@ -35,9 +62,6 @@ test {
     // set heap size for the test JVM(s)
     minHeapSize = "128m"
     maxHeapSize = "512m"
-
-    // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
 }
 
 wrapper {
